<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Drawing Fun</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="start_new">New</string>
	<string name="brush">Brush</string>
	<string name="erase">Erase</string>
	<string name="opacity">Opacity</string>
	<string name="save">Save</string>
	<string name="paint">Paint</string>
	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>

	<string name="send_to">Partager</string>

	<item name="file_menu_btn" type="id"/>
	<item name="import_btn" type="id"/>
	<item name="save_btn" type="id"/>
	<item name="new_btn" type="id"/>

	<item name="color_menu_btn" type="id"/>
	<item name="palette_btn" type="id"/>
	<item name="layers_btn" type="id"/>
	<item name="share_btn" type="id"/>

	<item name="edit_menu_btn" type='id'/>
	<item name="text_btn" type="id"/>
	<item name="draw_btn" type="id"/>
	<item name="erase_btn" type="id"/>

	<item name="position_btn" type="id"/>
</resources>