<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFCCCCCC"
	android:orientation="vertical"
	tools:context=".MainActivity" >

	<!-- Top Buttons -->

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:orientation="horizontal" >

		<ImageButton
			android:id="@+id/new_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/start_new"
			android:src="@drawable/ic_delete_sweep_white_24dp" />

		<ImageButton
			android:id="@+id/draw_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/brush"
			android:src="@drawable/ic_brush_white_24dp" />

		<ImageButton
			android:id="@+id/erase_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/erase"
			android:src="@drawable/eraser_variant" />

		<ImageButton
			android:id="@+id/opacity_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/opacity"
			android:src="@drawable/ic_opacity_white_24dp" />

		<ImageButton
			android:id="@+id/save_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/save"
			android:src="@drawable/ic_save_white_24dp" />
	</LinearLayout>

	<!-- Custom View -->

	<com.example.drawingfun.DrawingView
		android:id="@+id/drawing"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_marginBottom="3dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_marginTop="3dp"
		android:layout_weight="1"
		android:background="#FFFFFFFF" />

	<!-- Color Palette -->

	<LinearLayout
		android:id="@+id/paint_colors"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical" >

		<ImageButton
			android:layout_width="@dimen/large_brush"
			android:layout_height="@dimen/large_brush"
			android:background="#FFFFFF"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FFFFFF" />

		<ImageButton
			android:layout_width="@dimen/large_brush"
			android:layout_height="@dimen/large_brush"
			android:background="#FF0000"
			android:contentDescription="@string/paint"
			android:onClick="getPicture"
			android:src="@drawable/paint"
			android:tag="#FFFFFF" />
	</LinearLayout>

</LinearLayout>